# gromi_scan_planning

./: CMakeLists.txt  README.md  package.xml
launch/: control.launch  description.launch  gmapping_demo.launch  gromi_scanning.launch  gromi_setup.launch  pointcloud_filter.launch  simulation_gromi.launch  simulation_gromi_gmapping.launch  twist_mux.launch  view_robot.launch  world.launch
launch/include/: gmapping.launch  lego_loam_run.launch  move_base.launch
params/: base_local_planner_params.yaml
rviz/: lidar.rviz
src/: common_header.h  explore.py  explore_old.py  explore_old2.py  find_best_frontier.py  frontier_detector.cpp  gromi_static_scan.py  laserscan_to_pointcloud_node.cpp  motor_controller.py  planner.cpp  pt_generation.py  scan_motor_controller.py
urdf/: jackal.urdf.xacro
worlds/: boxes.world  cylinders.world
